<resources>
    <string name="app_name">Delhi with Me</string>
    <string name="loginfromsignup">LOGIN</string>
    <string name="already_a_user">Already a User?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signup"><u>SIGNUP</u></string>
    <string name="nametvs">Name</string>
    <string name="getstarted">GETSTARTED</string>
    <string name="login">LOGIN</string>
    <string name="need_an_account">Need an account?</string>
    <string name="registered">Registration Completed Successfully!</string>
    <string name="verifytxt">Verify Your Email And Comeback To Login</string>
    <string name="click_here_to_verify">Click here to Verify</string>
    <string name="verifylogin">LOGIN</string>
    <string name="choose_a_cinemahall"><u>Choose a Cinemahall</u></string>
    <string name="todo">TODO</string>

</resources>